--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -313,6 +313,15 @@
                 android:id="@+id/btnPlus"
                 android:text="+"
                 android:layout_weight="3"
+                style="@style/BtnStyleRight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btnAllCalcs"
+                android:text="All calc-s"
+                android:layout_weight="3"
+                android:textSize="16sp"
                 style="@style/BtnStyleRight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
