--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,331 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".presentation.MainActivity.MainActivity">
+    tools:context=".presentation.main.MainActivity">
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:background="@android:color/white"
-        android:layout_height="200dp">
-
-
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <HorizontalScrollView
-                android:id="@+id/horScrollView"
-                android:scrollbars="none"
-                android:gravity="right"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/txtEntered"
-                    android:textSize="60sp"
-                    android:layout_gravity="right"
-                    android:inputType="text"
-                    android:textColor="@android:color/black"
-                    android:layout_marginTop="24dp"
-                    android:paddingRight="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </HorizontalScrollView>
-        </ScrollView>
-        <TextView
-            android:id="@+id/txtResult"
-            android:text="0"
-            android:textSize="24sp"
-            android:gravity="right"
-            android:paddingRight="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_below="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingLeft="8dp"
-            android:background="@color/colorPrimary"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+        <fragment
+            android:id="@+id/fragment_container_calc"
+            android:layout_width="match_parent"
+            android:name="com.example.formi.mediasoftcalc.presentation.main.MainFragment"
+            android:layout_height="match_parent" />
 
-            <Button
-                android:id="@+id/btn7"
-                android:text="7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn4"
-                android:text="4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-            <Button
-                android:id="@+id/btn1"
-                android:text="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-            <Button
-                android:id="@+id/btnDot"
-                android:text="."
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:background="@color/colorPrimary"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/btn8"
-                android:text="8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-            <Button
-                android:id="@+id/btn5"
-                android:text="5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-            <Button
-                android:id="@+id/btn2"
-                android:text="2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-            <Button
-                android:id="@+id/btn0"
-                android:text="0"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingRight="8dp"
-            android:background="@color/colorPrimary"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/btn9"
-                android:text="9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn6"
-                android:text="6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-            <Button
-                android:id="@+id/btn3"
-                android:text="3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-            <Button
-                android:id="@+id/btnResult"
-                android:text="="
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/BtnStyle"/>
-
-        </LinearLayout>
-
-
-
-       <!-- <GridLayout
-            android:background="@android:color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:rowCount="4"
-            android:padding="8dp"
-            android:columnCount="3">
-
-            <Button
-                android:id="@+id/btn7"
-                android:text="7"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn8"
-                android:text="8"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn9"
-                android:text="9"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-
-
-            <Button
-                android:id="@+id/btn4"
-                android:text="4"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn5"
-                android:text="5"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn6"
-                android:text="6"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-
-
-            <Button
-                android:id="@+id/btn1"
-                android:text="1"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn2"
-                android:text="2"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn3"
-                android:text="3"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-
-
-            <Button
-                android:id="@+id/btnDot"
-                android:text="."
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btn0"
-                android:text="0"
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-            <Button
-                android:id="@+id/btnResult"
-                android:text="="
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                style="@style/BtnStyle"/>
-
-        </GridLayout> -->
-
-        <LinearLayout
-            android:layout_marginRight="8dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingRight="8dp"
-            android:background="@color/colorPrimary"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/btnDelete"
-                android:text="DEL"
-                android:layout_weight="1"
-                style="@style/BtnStyleRight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/btnDiv"
-                android:text="/"
-                android:layout_weight="1"
-                style="@style/BtnStyleRight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/btnMult"
-                android:text="*"
-                android:layout_weight="1"
-                style="@style/BtnStyleRight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/btnMinus"
-                android:text="-"
-                android:layout_weight="1"
-                style="@style/BtnStyleRight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/btnPlus"
-                android:text="+"
-                android:layout_weight="3"
-                style="@style/BtnStyleRight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/btnAllCalcs"
-                android:text="All calc-s"
-                android:layout_weight="3"
-                android:textSize="16sp"
-                style="@style/BtnStyleRight"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+        <fragment
+            android:id="@+id/fragment_container_story"
+            android:layout_width="match_parent"
+            android:name="com.example.formi.mediasoftcalc.presentation.story.StoryFragment"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 
 </LinearLayout>
