--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -13,6 +13,7 @@
         android:id="@+id/txtNoCalc"
         android:text="@string/no_calcs"
         android:layout_centerInParent="true"
+        android:gravity="center"
         android:textSize="26sp"
         android:visibility="invisible"
         android:textColor="@color/colorPrimary"
